Inverter schedule 15 min support
